fixed unreadable button text.

--- a/assets/styles/_base.scss
+++ b/assets/styles/_base.scss
@@ -66,9 +66,7 @@ em {
 }
 
 .btn {
-  border: none;
   border-radius: 0;
-  background: $primary;
 
   a {
     color: $white;
